--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
                                                                                                
 <body>
-    <div class="container text-center mt-4">
+    <div class="container text-center mt-4" style="font-family: fantasy;>
         <div class="alert alert-danger" role="alert">
-            <h1>random guess</h1>
+            <h1>RANDOM GUESS</h1>
           </div>
           <div class="d-flex justify-content-center align-items-center"> 
             <div class="card" style="width: 18rem;">
